--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Project
-sonar.organization=eureka-framework
-sonar.projectKey=eureka-framework_component-template
+sonar.organization=velkuns
+sonar.projectKey=velkuns_game-text-engine
 
 # Path to sources
 sonar.sources=src/
