--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "eureka/component-template",
-  "description": "Template for new component & domain",
+  "name": "velkuns/game-text-engine",
+  "description": "This is a PHP Game Text Engine to create games based on texts, with choices, items, and more.",
   "type": "library",
   "minimum-stability": "stable",
   "license": "MIT",
@@ -14,31 +14,30 @@
 
   "autoload": {
     "psr-4": {
-      "Eureka\\Component\\Template\\": "./src"
+      "Velkuns\\GameTextEngine\\": "./src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Eureka\\Component\\Template\\Tests\\": "./tests"
+      "Velkuns\\GameTextEngine\\Tests\\": "./tests"
     }
   },
 
   "config": {
-    "sort-packages": true,
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
+    "sort-packages": true
   },
 
   "require": {
-    "php": "7.4.*||8.0.*||8.1.*||8.2.*"
+    "php": "8.3.*||8.4.*||8.5.*"
   },
 
   "require-dev": {
-    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-    "phpstan/phpstan": "^1.10",
-    "phpunit/phpcov": "^8.2",
-    "phpunit/phpunit": "^9.6",
-    "squizlabs/php_codesniffer": "^3.7"
+    "friendsofphp/php-cs-fixer": "^3.85.1",
+    "phpstan/phpstan": "^2.1.22",
+    "phpstan/phpstan-strict-rules": "^2.0.0",
+    "phpstan/phpstan-phpunit": "^2.0.7",
+    "phpunit/phpcov": "^11.0.1",
+    "phpunit/phpunit": "^12.3.0",
+    "shipmonk/composer-dependency-analyser": "^1.8.3"
   }
 }
