--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,42 +1,28 @@
 <?xml version="1.0"?>
 <phpunit
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
-        backupGlobals="true"
-        backupStaticAttributes="false"
+        xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
         colors="true"
-        convertDeprecationsToExceptions="false"
-        convertErrorsToExceptions="true"
-        convertNoticesToExceptions="true"
-        convertWarningsToExceptions="true"
-        failOnEmptyTestSuite="true"
+        cacheDirectory="build/.phpunit.cache"
+        failOnEmptyTestSuite="false"
         failOnIncomplete="true"
         failOnRisky="true"
         failOnWarning="true"
-        forceCoversAnnotation="false"
-        processIsolation="false"
-        stopOnError="false"
-        stopOnFailure="false"
-        stopOnIncomplete="false"
-        stopOnSkipped="false"
-        stopOnRisky="false"
-        timeoutForSmallTests="1"
-        timeoutForMediumTests="10"
-        timeoutForLargeTests="60"
-        verbose="false">
-  <php>
-    <ini name="error_reporting" value="E_ALL" />
-  </php>
-
-  <coverage>
+>
+  <source>
     <include>
       <directory>./src</directory>
     </include>
-  </coverage>
+  </source>
 
   <testsuites>
-    <testsuite name="Test suite">
-      <directory>./tests</directory>
+    <testsuite name="unit">
+      <directory>./tests/Unit</directory>
+    </testsuite>
+
+    <testsuite name="integration">
+      <directory>./tests/Integration</directory>
     </testsuite>
   </testsuites>
+
 </phpunit>
